tests/miniJava/neg/006824_mutation.MiniJava
class public int [] java ( ) { return 0 ; } java { public static void Main ( String [ ] java ) { { } } }
